WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100094
[WK2] REGRESSION(
r132169
): It broke all plugin related test
https://bugs.webkit.org/show_bug.cgi?id=100094
Summary
[WK2] REGRESSION(r132169): It broke all plugin related test
Csaba Osztrogonác
Reported
2012-10-23 02:26:02 PDT
See the bots for details: - Qt bot:
http://build.webkit.sed.hu/builders/x86-64%20Linux%20Qt%20Release%20WebKit2%20%28Amazon%20EC2%29/builds/10000
- Apple Lion bot:
http://build.webkit.org/builders/Apple%20Lion%20Release%20WK2%20%28Tests%29/builds/4515
- EFL bot:
http://build.webkit.org/results/EFL%20Linux%2064-bit%20Debug%20WK2/r132182%20%284926%29/results.html
- GTK bot:
http://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release%20WK2%20%28Tests%29/builds/2725
Could you guys fix this regression, please? Otherwise you could have run layout tests before committing buggy patches and/or watch the bots after committing.
Attachments
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2012-10-23 04:30:17 PDT
Ninja fixed with <
http://trac.webkit.org/changeset/132201
>, sorry about the breakage.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug