[WK2] REGRESSION(r132169): It broke all plugin related test. <http://webkit.org/b/100094>

Unreviewed test fix, make the CoreIPC encode/decode functions for CString match again.

* Platform/CoreIPC/ArgumentCoders.cpp:
(CoreIPC::::encode):

Canonical link: https://commits.webkit.org/118121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132201 268f45cc-cd09-0410-ab3c-d52691b4dbfc